// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`assembled themes matches the dark token snapshot 1`] = `
{
  "colors": {
    "accent": "#262626",
    "accentForeground": "#F5F5F5",
    "background": "#030303",
    "border": "#262626",
    "brandAccent": "#FF453A",
    "brandAccentSoft": "rgba(255,69,58,0.14)",
    "brandBg": "#050505",
    "brandHairline": "#2B2B2B",
    "brandPanel": "#0B0B0B",
    "brandWell": "#020202",
    "card": "#0D0D0D",
    "cardForeground": "#F5F5F5",
    "codeComment": "#7F8793",
    "codeKeyword": "#C699F8",
    "codeNumber": "#EFB062",
    "codePunct": "#8B939F",
    "codeString": "#76CF8A",
    "destructive": "#EA3C3F",
    "destructiveForeground": "#F5F5F5",
    "destructiveSoft": "rgba(234,60,63,0.14)",
    "foreground": "#F5F5F5",
    "info": "#4CB0E5",
    "infoSoft": "rgba(76,176,229,0.14)",
    "input": "#262626",
    "muted": "#181818",
    "mutedForeground": "#A1A1A1",
    "paneDivider": "#424242",
    "popover": "#1E1E1E",
    "popoverAccent": "#2E2E2E",
    "popoverBorder": "#303030",
    "popoverForeground": "#F5F5F5",
    "primary": "#F5F5F5",
    "primaryForeground": "#070707",
    "ring": "#F5F5F5",
    "secondary": "#1F1F1F",
    "secondaryForeground": "#F5F5F5",
    "shell": "#161616",
    "success": "#54C57A",
    "successSoft": "rgba(84,197,122,0.14)",
    "terminalBg": "#0A0A0A",
    "toneActive": "#3EC873",
    "toneIdle": "#989898",
    "toneOffline": "#525252",
    "toneWaiting": "#3FB1EA",
    "warning": "#E6AC3D",
    "warningSoft": "rgba(230,172,61,0.14)",
  },
  "isDark": true,
  "motion": {
    "duration": {
      "base": 150,
      "brandMarquee": 56000,
      "channelDrift": 750,
      "connectingDelay": 240,
      "connectingSlow": 8000,
      "connectingUnmount": 260,
      "copyFeedback": 2000,
      "fast": 100,
      "grimoireSpin": 90000,
      "grimoireSpinReverse": 140000,
      "hoverIntent": 260,
      "instant": 0,
      "jiggle": 450,
      "launcherItemStagger": 35,
      "medium": 200,
      "overlay": 300,
      "panel": 220,
      "progress": 500,
      "reduced": 0.01,
      "sidebarLabelDelay": 75,
      "skeleton": 2000,
      "spinner": 1000,
      "successHold": 420,
      "toastAlert": 7000,
      "toastError": 8000,
      "toastExitRemoval": 180,
      "toastInfo": 5000,
      "tooltipDelay": 500,
      "uploadMinVisible": 420,
      "uploadSheen": 1200,
    },
    "easing": {
      "cssEase": {
        "factory": [Function],
      },
      "in": {
        "factory": [Function],
      },
      "inOut": {
        "factory": [Function],
      },
      "linear": [Function],
      "out": {
        "factory": [Function],
      },
      "pulse": {
        "factory": [Function],
      },
      "swift": {
        "factory": [Function],
      },
    },
    "easingCurve": {
      "cssEase": [
        0.25,
        0.1,
        0.25,
        1,
      ],
      "in": [
        0.4,
        0,
        1,
        1,
      ],
      "inOut": [
        0.4,
        0,
        0.2,
        1,
      ],
      "linear": [
        0,
        0,
        1,
        1,
      ],
      "out": [
        0,
        0,
        0.2,
        1,
      ],
      "pulse": [
        0.4,
        0,
        0.6,
        1,
      ],
      "swift": [
        0.32,
        0.72,
        0,
        1,
      ],
    },
    "gesture": {
      "drawerAxisLock": 8,
      "drawerDismiss": 70,
      "sheetDismiss": 90,
    },
    "pattern": {
      "channelBackgroundDriftPx": 8,
      "channelDashPx": 2,
      "channelPeriodPx": 8,
      "uploadSheenBackgroundSizePercent": 200,
      "uploadSheenFromPercent": 100,
      "uploadSheenToPercent": -100,
    },
    "repeat": {
      "binJiggle": {
        "duration": 450,
        "easing": {
          "factory": [Function],
        },
        "infinite": true,
      },
      "channelDrift": {
        "duration": 750,
        "easing": [Function],
        "infinite": true,
      },
      "skeleton": {
        "duration": 2000,
        "easing": {
          "factory": [Function],
        },
        "infinite": true,
      },
      "spinner": {
        "duration": 1000,
        "easing": [Function],
        "infinite": true,
      },
      "statusPing": {
        "duration": 1000,
        "easing": {
          "factory": [Function],
        },
        "infinite": true,
      },
      "uploadSheen": {
        "duration": 1200,
        "easing": [Function],
        "infinite": true,
      },
    },
    "transform": {
      "binJiggleDegrees": [
        -7,
        7,
      ],
      "drawerHiddenXPercent": -100,
      "enterScale": 0.95,
      "launcherHiddenScale": 0.75,
      "launcherHoverScale": 1.05,
      "launcherPressScale": 0.95,
      "menuSlide": 16,
      "sheetHiddenYPercent": 100,
      "statusPingScale": 2,
      "switchThumbOffX": 2,
      "switchThumbOnX": 18,
      "toastSlide": 16,
    },
    "transition": {
      "collapse": {
        "duration": 200,
        "easing": {
          "factory": [Function],
        },
      },
      "default": {
        "duration": 150,
        "easing": {
          "factory": [Function],
        },
      },
      "dialog": {
        "duration": 150,
        "easing": {
          "factory": [Function],
        },
      },
      "drawer": {
        "duration": 220,
        "easing": {
          "factory": [Function],
        },
      },
      "overlay": {
        "duration": 300,
        "easing": {
          "factory": [Function],
        },
      },
      "press": {
        "duration": 150,
        "easing": {
          "factory": [Function],
        },
      },
      "quickEnter": {
        "duration": 100,
        "easing": {
          "factory": [Function],
        },
      },
      "sheet": {
        "duration": 220,
        "easing": {
          "factory": [Function],
        },
      },
      "shellGeometry": {
        "duration": 200,
        "easing": {
          "factory": [Function],
        },
      },
      "statusPulse": {
        "duration": 1000,
        "easing": {
          "factory": [Function],
        },
      },
      "toastEnter": {
        "duration": 200,
        "easing": {
          "factory": [Function],
        },
      },
      "toastExit": {
        "duration": 150,
        "easing": {
          "factory": [Function],
        },
      },
    },
  },
  "radii": {
    "device": 48,
    "lg": 10,
    "md": 8,
    "pill": 9999,
    "sm": 6,
    "xl": 12,
    "xxl": 16,
  },
  "space": [Function],
  "terminal": {
    "background": "#0A0A0A",
    "black": "#2E3436",
    "blue": "#3465A4",
    "brightBlack": "#555753",
    "brightBlue": "#729FCF",
    "brightCyan": "#34E2E2",
    "brightGreen": "#8AE234",
    "brightMagenta": "#AD7FA8",
    "brightRed": "#EF2929",
    "brightWhite": "#EEEEEC",
    "brightYellow": "#FCE94F",
    "cursor": "#E5E5E5",
    "cursorAccent": "#000000",
    "cyan": "#06989A",
    "foreground": "#E5E5E5",
    "green": "#4E9A06",
    "magenta": "#75507B",
    "red": "#CC0000",
    "selectionBackground": "rgba(255,255,255,0.30)",
    "selectionInactiveBackground": "rgba(255,255,255,0.30)",
    "white": "#D3D7CF",
    "yellow": "#C4A000",
  },
  "type": {
    "clampDisplay": [Function],
    "displayClamp": {
      "c17_2_21": [
        17,
        2,
        21,
      ],
      "c24_3_7_35": [
        24,
        3.7,
        35,
      ],
      "c24_3_7_41": [
        24,
        3.7,
        41,
      ],
      "c26_3_5_39": [
        26,
        3.5,
        39,
      ],
      "c26_4_5_48": [
        26,
        4.5,
        48,
      ],
      "c26_5_9_32": [
        26,
        5.9,
        32,
      ],
      "c28_3_7_48": [
        28,
        3.7,
        48,
      ],
      "c30_4_5_48": [
        30,
        4.5,
        48,
      ],
      "c30_4_8_52": [
        30,
        4.8,
        52,
      ],
      "c30_5_4_48": [
        30,
        5.4,
        48,
      ],
      "c32_4_3_63": [
        32,
        4.3,
        63,
      ],
      "c32_4_8_60": [
        32,
        4.8,
        60,
      ],
      "c32_5_6_63": [
        32,
        5.6,
        63,
      ],
      "c35_5_6_63": [
        35,
        5.6,
        63,
      ],
      "c36_6_9_65": [
        36,
        6.9,
        65,
      ],
      "c40_7_5_92": [
        40,
        7.5,
        92,
      ],
    },
    "displayLineHeightRatio": {
      "none": 1,
      "posterTightest": 0.98,
      "r102": 1.02,
      "r104": 1.04,
      "r106": 1.06,
      "r108": 1.08,
      "r125": 1.25,
      "r130": 1.3,
      "r155": 1.55,
      "r160": 1.6,
    },
    "fontFamily": {
      "grimoireMedium": "IBMPlexSans_500Medium",
      "grimoireRegular": "IBMPlexSans_400Regular",
      "mono": "Menlo",
      "posterLight": "Rowdies_300Light",
      "sans": "System",
      "sigil": "SF Mono",
    },
    "fontSize": {
      "base": 16,
      "displayLg": 28,
      "displayMd": 26,
      "displaySm": 24,
      "fifteen": 15,
      "lg": 18,
      "micro": 11,
      "microIllustration": 8.5,
      "seventeen": 17,
      "sm": 14,
      "ten": 10,
      "tenPlus": 10.5,
      "terminal": 13,
      "tiny": 9,
      "tinyPlus": 9.5,
      "xl": 20,
      "xs": 12,
    },
    "fontWeight": {
      "light": "300",
      "medium": "500",
      "normal": "400",
      "semibold": "600",
    },
    "letterSpacing": {
      "normalEm": 0,
      "sigil04Em": 0.04,
      "sigil10Em": 0.1,
      "sigil12Em": 0.12,
      "sigil14Em": 0.14,
      "sigil16Em": 0.16,
      "sigil18Em": 0.18,
      "sigil22Em": 0.22,
      "sigil30Em": 0.3,
      "tightEm": -0.025,
      "tighterEm": -0.05,
      "wideEm": 0.025,
    },
    "lineHeight": {
      "base": 24,
      "compact": 14,
      "lg": 28,
      "loose": 2,
      "micro": 16,
      "none": 1,
      "normal": 1.5,
      "relaxed": 1.625,
      "sm": 20,
      "snug": 1.375,
      "terminal": 15.6,
      "tight": 1.25,
      "xl": 32,
    },
    "typeStyles": {
      "cardTitle": {
        "fontSize": 16,
        "fontWeight": "600",
        "letterSpacing": 0,
        "lineHeight": 20,
      },
      "grimoireBody": {
        "fontFamily": "IBMPlexSans_400Regular",
        "fontSize": 15,
        "fontWeight": "400",
        "lineHeight": 24,
      },
      "grimoireBodyLoose": {
        "fontFamily": "IBMPlexSans_400Regular",
        "fontSize": 15,
        "fontWeight": "400",
        "lineHeight": 28,
      },
      "micro": {
        "fontSize": 11,
        "fontWeight": "500",
        "lineHeight": 16,
      },
      "sigilButton": {
        "fontFamily": "SF Mono",
        "fontSize": 12,
        "fontWeight": "500",
        "letterSpacing": 1.2,
        "lineHeight": 16,
        "textTransform": "uppercase",
      },
      "sigilLabel": {
        "fontFamily": "SF Mono",
        "fontSize": 11,
        "fontWeight": "500",
        "letterSpacing": 1.76,
        "lineHeight": 16,
        "textTransform": "uppercase",
      },
      "terminal": {
        "fontFamily": "Menlo",
        "fontSize": 13,
        "fontWeight": "400",
        "letterSpacing": 0,
        "lineHeight": 15.6,
      },
      "uiBase": {
        "fontSize": 16,
        "fontWeight": "400",
        "lineHeight": 24,
      },
      "uiLg": {
        "fontSize": 18,
        "fontWeight": "400",
        "lineHeight": 28,
      },
      "uiSm": {
        "fontSize": 14,
        "fontWeight": "400",
        "lineHeight": 20,
      },
      "uiSmMedium": {
        "fontSize": 14,
        "fontWeight": "500",
        "lineHeight": 20,
      },
      "uiSmSemibold": {
        "fontSize": 14,
        "fontWeight": "600",
        "lineHeight": 20,
      },
      "uiXl": {
        "fontSize": 20,
        "fontWeight": "400",
        "lineHeight": 28,
      },
      "uiXs": {
        "fontSize": 12,
        "fontWeight": "400",
        "lineHeight": 16,
      },
    },
  },
}
`;

exports[`assembled themes matches the light token snapshot 1`] = `
{
  "colors": {
    "accent": "#E8E8E8",
    "accentForeground": "#0F0F0F",
    "background": "#FAFAFA",
    "border": "#DEDEDE",
    "brandAccent": "#E11E15",
    "brandAccentSoft": "rgba(225,30,21,0.12)",
    "brandBg": "#F5F5F5",
    "brandHairline": "#D7D7D7",
    "brandPanel": "#FFFFFF",
    "brandWell": "#EBEBEB",
    "card": "#FFFFFF",
    "cardForeground": "#0F0F0F",
    "codeComment": "#6B727E",
    "codeKeyword": "#7945AB",
    "codeNumber": "#9D5300",
    "codePunct": "#6B727E",
    "codeString": "#197037",
    "destructive": "#C51D28",
    "destructiveForeground": "#FCFCFC",
    "destructiveSoft": "rgba(197,29,40,0.10)",
    "foreground": "#0F0F0F",
    "info": "#1870A1",
    "infoSoft": "rgba(24,112,161,0.12)",
    "input": "#DEDEDE",
    "muted": "#F0F0F0",
    "mutedForeground": "#5B5B5B",
    "paneDivider": "#CACACA",
    "popover": "#FFFFFF",
    "popoverAccent": "#EBEBEB",
    "popoverBorder": "#D7D7D7",
    "popoverForeground": "#0F0F0F",
    "primary": "#161616",
    "primaryForeground": "#FAFAFA",
    "ring": "#0F0F0F",
    "secondary": "#EEEEEE",
    "secondaryForeground": "#161616",
    "shell": "#EDEDED",
    "success": "#137D41",
    "successSoft": "rgba(19,125,65,0.12)",
    "terminalBg": "#FCFCFC",
    "toneActive": "#009A4D",
    "toneIdle": "#808080",
    "toneOffline": "#B7B7B7",
    "toneWaiting": "#1A89C5",
    "warning": "#9D6400",
    "warningSoft": "rgba(157,100,0,0.14)",
  },
  "isDark": false,
  "motion": {
    "duration": {
      "base": 150,
      "brandMarquee": 56000,
      "channelDrift": 750,
      "connectingDelay": 240,
      "connectingSlow": 8000,
      "connectingUnmount": 260,
      "copyFeedback": 2000,
      "fast": 100,
      "grimoireSpin": 90000,
      "grimoireSpinReverse": 140000,
      "hoverIntent": 260,
      "instant": 0,
      "jiggle": 450,
      "launcherItemStagger": 35,
      "medium": 200,
      "overlay": 300,
      "panel": 220,
      "progress": 500,
      "reduced": 0.01,
      "sidebarLabelDelay": 75,
      "skeleton": 2000,
      "spinner": 1000,
      "successHold": 420,
      "toastAlert": 7000,
      "toastError": 8000,
      "toastExitRemoval": 180,
      "toastInfo": 5000,
      "tooltipDelay": 500,
      "uploadMinVisible": 420,
      "uploadSheen": 1200,
    },
    "easing": {
      "cssEase": {
        "factory": [Function],
      },
      "in": {
        "factory": [Function],
      },
      "inOut": {
        "factory": [Function],
      },
      "linear": [Function],
      "out": {
        "factory": [Function],
      },
      "pulse": {
        "factory": [Function],
      },
      "swift": {
        "factory": [Function],
      },
    },
    "easingCurve": {
      "cssEase": [
        0.25,
        0.1,
        0.25,
        1,
      ],
      "in": [
        0.4,
        0,
        1,
        1,
      ],
      "inOut": [
        0.4,
        0,
        0.2,
        1,
      ],
      "linear": [
        0,
        0,
        1,
        1,
      ],
      "out": [
        0,
        0,
        0.2,
        1,
      ],
      "pulse": [
        0.4,
        0,
        0.6,
        1,
      ],
      "swift": [
        0.32,
        0.72,
        0,
        1,
      ],
    },
    "gesture": {
      "drawerAxisLock": 8,
      "drawerDismiss": 70,
      "sheetDismiss": 90,
    },
    "pattern": {
      "channelBackgroundDriftPx": 8,
      "channelDashPx": 2,
      "channelPeriodPx": 8,
      "uploadSheenBackgroundSizePercent": 200,
      "uploadSheenFromPercent": 100,
      "uploadSheenToPercent": -100,
    },
    "repeat": {
      "binJiggle": {
        "duration": 450,
        "easing": {
          "factory": [Function],
        },
        "infinite": true,
      },
      "channelDrift": {
        "duration": 750,
        "easing": [Function],
        "infinite": true,
      },
      "skeleton": {
        "duration": 2000,
        "easing": {
          "factory": [Function],
        },
        "infinite": true,
      },
      "spinner": {
        "duration": 1000,
        "easing": [Function],
        "infinite": true,
      },
      "statusPing": {
        "duration": 1000,
        "easing": {
          "factory": [Function],
        },
        "infinite": true,
      },
      "uploadSheen": {
        "duration": 1200,
        "easing": [Function],
        "infinite": true,
      },
    },
    "transform": {
      "binJiggleDegrees": [
        -7,
        7,
      ],
      "drawerHiddenXPercent": -100,
      "enterScale": 0.95,
      "launcherHiddenScale": 0.75,
      "launcherHoverScale": 1.05,
      "launcherPressScale": 0.95,
      "menuSlide": 16,
      "sheetHiddenYPercent": 100,
      "statusPingScale": 2,
      "switchThumbOffX": 2,
      "switchThumbOnX": 18,
      "toastSlide": 16,
    },
    "transition": {
      "collapse": {
        "duration": 200,
        "easing": {
          "factory": [Function],
        },
      },
      "default": {
        "duration": 150,
        "easing": {
          "factory": [Function],
        },
      },
      "dialog": {
        "duration": 150,
        "easing": {
          "factory": [Function],
        },
      },
      "drawer": {
        "duration": 220,
        "easing": {
          "factory": [Function],
        },
      },
      "overlay": {
        "duration": 300,
        "easing": {
          "factory": [Function],
        },
      },
      "press": {
        "duration": 150,
        "easing": {
          "factory": [Function],
        },
      },
      "quickEnter": {
        "duration": 100,
        "easing": {
          "factory": [Function],
        },
      },
      "sheet": {
        "duration": 220,
        "easing": {
          "factory": [Function],
        },
      },
      "shellGeometry": {
        "duration": 200,
        "easing": {
          "factory": [Function],
        },
      },
      "statusPulse": {
        "duration": 1000,
        "easing": {
          "factory": [Function],
        },
      },
      "toastEnter": {
        "duration": 200,
        "easing": {
          "factory": [Function],
        },
      },
      "toastExit": {
        "duration": 150,
        "easing": {
          "factory": [Function],
        },
      },
    },
  },
  "radii": {
    "device": 48,
    "lg": 10,
    "md": 8,
    "pill": 9999,
    "sm": 6,
    "xl": 12,
    "xxl": 16,
  },
  "space": [Function],
  "terminal": {
    "background": "#FCFCFC",
    "black": "#000000",
    "blue": "#0451A5",
    "brightBlack": "#666666",
    "brightBlue": "#0451A5",
    "brightCyan": "#0598BC",
    "brightGreen": "#14CE14",
    "brightMagenta": "#BC05BC",
    "brightRed": "#CD3131",
    "brightWhite": "#A5A5A5",
    "brightYellow": "#B5BA00",
    "cursor": "#1F1F1F",
    "cursorAccent": "#FCFCFC",
    "cyan": "#0598BC",
    "foreground": "#1F1F1F",
    "green": "#00BC00",
    "magenta": "#BC05BC",
    "red": "#CD3131",
    "selectionBackground": "rgba(172,206,247,0.30)",
    "selectionInactiveBackground": "rgba(225,230,235,0.30)",
    "white": "#555555",
    "yellow": "#949800",
  },
  "type": {
    "clampDisplay": [Function],
    "displayClamp": {
      "c17_2_21": [
        17,
        2,
        21,
      ],
      "c24_3_7_35": [
        24,
        3.7,
        35,
      ],
      "c24_3_7_41": [
        24,
        3.7,
        41,
      ],
      "c26_3_5_39": [
        26,
        3.5,
        39,
      ],
      "c26_4_5_48": [
        26,
        4.5,
        48,
      ],
      "c26_5_9_32": [
        26,
        5.9,
        32,
      ],
      "c28_3_7_48": [
        28,
        3.7,
        48,
      ],
      "c30_4_5_48": [
        30,
        4.5,
        48,
      ],
      "c30_4_8_52": [
        30,
        4.8,
        52,
      ],
      "c30_5_4_48": [
        30,
        5.4,
        48,
      ],
      "c32_4_3_63": [
        32,
        4.3,
        63,
      ],
      "c32_4_8_60": [
        32,
        4.8,
        60,
      ],
      "c32_5_6_63": [
        32,
        5.6,
        63,
      ],
      "c35_5_6_63": [
        35,
        5.6,
        63,
      ],
      "c36_6_9_65": [
        36,
        6.9,
        65,
      ],
      "c40_7_5_92": [
        40,
        7.5,
        92,
      ],
    },
    "displayLineHeightRatio": {
      "none": 1,
      "posterTightest": 0.98,
      "r102": 1.02,
      "r104": 1.04,
      "r106": 1.06,
      "r108": 1.08,
      "r125": 1.25,
      "r130": 1.3,
      "r155": 1.55,
      "r160": 1.6,
    },
    "fontFamily": {
      "grimoireMedium": "IBMPlexSans_500Medium",
      "grimoireRegular": "IBMPlexSans_400Regular",
      "mono": "Menlo",
      "posterLight": "Rowdies_300Light",
      "sans": "System",
      "sigil": "SF Mono",
    },
    "fontSize": {
      "base": 16,
      "displayLg": 28,
      "displayMd": 26,
      "displaySm": 24,
      "fifteen": 15,
      "lg": 18,
      "micro": 11,
      "microIllustration": 8.5,
      "seventeen": 17,
      "sm": 14,
      "ten": 10,
      "tenPlus": 10.5,
      "terminal": 13,
      "tiny": 9,
      "tinyPlus": 9.5,
      "xl": 20,
      "xs": 12,
    },
    "fontWeight": {
      "light": "300",
      "medium": "500",
      "normal": "400",
      "semibold": "600",
    },
    "letterSpacing": {
      "normalEm": 0,
      "sigil04Em": 0.04,
      "sigil10Em": 0.1,
      "sigil12Em": 0.12,
      "sigil14Em": 0.14,
      "sigil16Em": 0.16,
      "sigil18Em": 0.18,
      "sigil22Em": 0.22,
      "sigil30Em": 0.3,
      "tightEm": -0.025,
      "tighterEm": -0.05,
      "wideEm": 0.025,
    },
    "lineHeight": {
      "base": 24,
      "compact": 14,
      "lg": 28,
      "loose": 2,
      "micro": 16,
      "none": 1,
      "normal": 1.5,
      "relaxed": 1.625,
      "sm": 20,
      "snug": 1.375,
      "terminal": 15.6,
      "tight": 1.25,
      "xl": 32,
    },
    "typeStyles": {
      "cardTitle": {
        "fontSize": 16,
        "fontWeight": "600",
        "letterSpacing": 0,
        "lineHeight": 20,
      },
      "grimoireBody": {
        "fontFamily": "IBMPlexSans_400Regular",
        "fontSize": 15,
        "fontWeight": "400",
        "lineHeight": 24,
      },
      "grimoireBodyLoose": {
        "fontFamily": "IBMPlexSans_400Regular",
        "fontSize": 15,
        "fontWeight": "400",
        "lineHeight": 28,
      },
      "micro": {
        "fontSize": 11,
        "fontWeight": "500",
        "lineHeight": 16,
      },
      "sigilButton": {
        "fontFamily": "SF Mono",
        "fontSize": 12,
        "fontWeight": "500",
        "letterSpacing": 1.2,
        "lineHeight": 16,
        "textTransform": "uppercase",
      },
      "sigilLabel": {
        "fontFamily": "SF Mono",
        "fontSize": 11,
        "fontWeight": "500",
        "letterSpacing": 1.76,
        "lineHeight": 16,
        "textTransform": "uppercase",
      },
      "terminal": {
        "fontFamily": "Menlo",
        "fontSize": 13,
        "fontWeight": "400",
        "letterSpacing": 0,
        "lineHeight": 15.6,
      },
      "uiBase": {
        "fontSize": 16,
        "fontWeight": "400",
        "lineHeight": 24,
      },
      "uiLg": {
        "fontSize": 18,
        "fontWeight": "400",
        "lineHeight": 28,
      },
      "uiSm": {
        "fontSize": 14,
        "fontWeight": "400",
        "lineHeight": 20,
      },
      "uiSmMedium": {
        "fontSize": 14,
        "fontWeight": "500",
        "lineHeight": 20,
      },
      "uiSmSemibold": {
        "fontSize": 14,
        "fontWeight": "600",
        "lineHeight": 20,
      },
      "uiXl": {
        "fontSize": 20,
        "fontWeight": "400",
        "lineHeight": 28,
      },
      "uiXs": {
        "fontSize": 12,
        "fontWeight": "400",
        "lineHeight": 16,
      },
    },
  },
}
`;
